[package]
name = "godwit"
version = "1.0.0"
authors = ["Utkarsh Bhardwaj (Passeriform) <bhardwajutkarsh.ub@gmail.com>"]
readme = "README.md"
exclude = [
	"assets/*"
]
edition = "2018"

[[bin]]
name = "godwit"
path = "src/main.rs"

[dependencies]
custom_error = "1.7.1"
getter-derive-rs = "1.0.0"
structopt = "0.3.14"
structopt-derive = "0.4.7"
dirs = "2.0.2"
glob = "0.3.0"
prettytable-rs = "0.8.0"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
log = "0.4.8"
simplelog = "0.7.6"
crossterm = "0.14.0"
tui = { version = "0.8.0", default-features = false, features = ['crossterm'] }
