[package]
name = "godwit"
description = "A hackable yet sane project manager and automation suite."
version = "0.1.1"
authors = ["Utkarsh Bhardwaj (Passeriform) <passeriform.ub@gmail.com>"]
readme = "README.md"
keywords = ["project", "management", "automation", "tracker", "suite"]
categories = ["command-line-utilities", "config", "data-structures"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Passeriform/GodWit"
homepage = "https://www.passeriform.com/prod/GodWit"
exclude = [
"assets/*"
]
edition = "2018"

[badges]
travis-ci = { repository = "Passeriform/GodWit" }
codecov = { repository = "Passeriform/GodWit" }
is-it-maintained-issue-resolution = { repository = "https://github.com/Passeriform/GodWit" }
is-it-maintained-open-issues = { repository = "https://github.com/Passeriform/GodWit" }
maintenance = { status = "actively-developed" }

[lib]
name = "godwit"
path = "src/lib.rs"

[[bin]]
name = "godwit"
path = "src/main.rs"

[[test]]
name = "integration"
path = "tests/tests.rs"

[dependencies]
custom_error = "1.7.1"
crossterm = "0.14.0"
dirs = "2.0.2"
getter-derive-rs = "1.0.0"
godwit-daemon = "0.1.1"
glob = "0.3.0"
log = "0.4.8"
prettytable-rs = "0.8.0"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
simplelog = "0.7.6"
structopt = "0.3.14"
structopt-derive = "0.4.7"
tui = { version = "0.8.0", default-features = false, features = ['crossterm'] }
